Rework: simplify auth roles output